# autoclicker

./: Cargo.toml  LICENSE  README.md  run.sh
src/: lib.rs  main.rs
